[metadata]
name = github_action_playground
version = 0.0.1
description = Playground for understanding GitHub Actions

[flake8]
application-import-names = grouper, itests, plugins, tests
import-order-style = smarkets
max-line-length = 120
ignore = E203, W503, F821

[mypy]
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = False
warn_unreachable = True
